--- a/index.html
+++ b/index.html
@@ -1,5 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Greek Islands Travel Blog</title>
+    <link rel="stylesheet" href="/main.css">
+</head>
+<body>
+    <header>
+        <h1>Greek Islands Travel Blog</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#destinations">Destinations</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  
-yes
+    <main>
+        <section id="home">
+            <h2>Welcome to the Greek Islands</h2>
+            <p>Discover the beauty and charm of the Greek Islands, from the stunning beaches of Mykonos to the historic ruins of Crete.</p>
+            <img src="images/greek-islands.jpg" alt="Beautiful Greek Islands">
+        </section>
+
+        <section id="about">
+            <h2>About This Blog</h2>
+            <p>This blog is dedicated to sharing the best travel tips, destinations, and experiences in the Greek Islands. Whether you're looking for adventure, relaxation, or cultural exploration, you'll find something here.</p>
+        </section>
+
+        <section id="destinations">
+            <h2>Top Destinations</h2>
+            <article class="destination">
+                <h3>Santorini</h3>
+                <img src="images/santorini.jpg" alt="Santorini">
+                <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
+            </article>
+            <article class="destination">
+                <h3>Mykonos</h3>
+                <img src="images/mykonos.jpg" alt="Mykonos">
+                <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
+            </article>
+            <article class="destination">
+                <h3>Crete</h3>
+                <img src="images/crete.jpg" alt="Crete">
+                <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Greek Islands Travel Blog. All rights reserved.</p>
+    </footer>
+</body>
+</html>
