--- a/packing.html
+++ b/packing.html
@@ -20,13 +20,13 @@
     </header>
 
     <main>
-        <section id="home">
+        <section id="packing">
             <h2>Welcome to the Greek Islands</h2>
             <p>Discover the beauty and charm of the Greek Islands, from the stunning beaches of Mykonos to the historic ruins of Crete.</p>
             <img src="images/greek-islands.jpg" alt="Beautiful Greek Islands">
         </section>
 
-        <section id="about">
+        <section id="packing">
             <h2>About This Blog</h2>
             <p>This blog is dedicated to sharing the best travel tips, destinations, and experiences in the Greek Islands. Whether you're looking for adventure, relaxation, or cultural exploration, you'll find something here.</p>
         </section>
