--- a/about.html
+++ b/about.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greek Islands Travel Blog</title>
     <link rel="stylesheet" href="/main.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>Greek Islands Travel Blog</h1>
+        <h1>Greece Travel Guide</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html">About</a></li>
                 <li><a href="/destinations.html">Destinations</a></li>
-                <li><a href="/packing.html">Packing List</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -22,7 +23,12 @@
     <main>
         <section id="about">
             <h2>About This Blog</h2>
-            <p>This blog is dedicated to sharing the best travel tips, destinations, and experiences in the Greek Islands. Whether you're looking for adventure, relaxation, or cultural exploration, you'll find something here.</p>
+            <p> Welcome to my Greece Travel Blog, your ultimate guide to exploring the enchanting land of Greece. 
+                Here, you'll find insider tips, detailed itineraries, and personal stories to help you navigate 
+                through Greece's historical landmarks, stunning islands, and vibrant culture. Whether you're planning 
+                your first visit or are a seasoned traveler looking for new adventures, this blog aims to inspire and 
+                equip you with everything you need for an unforgettable Greek journey. Join me as we uncover the beauty, 
+                history, and delicious cuisine that make Greece a dream destination for travelers around the world.</p>
         </section>
 
     </main>
