--- a/index.html
+++ b/index.html
@@ -3,56 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greek Islands Travel Blog</title>
+    <title>Greece Travel Guide</title>
     <link rel="stylesheet" href="/main.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <h1>Greek Islands Travel Blog</h1>
+        <h1>Greece Travel Guide</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html">About</a></li>
                 <li><a href="/destinations.html">Destinations</a></li>
-                <li><a href="/packing.html">Packing List</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="home">
-            <h2>Welcome to the Greek Islands</h2>
+            <h2>Welcome to Greece</h2>
             <p>Discover the beauty and charm of the Greek Islands, from the stunning beaches of Mykonos to the historic ruins of Crete.</p>
-            <img src="images/greek-islands.jpg" alt="Beautiful Greek Islands">
+            <img src="images/greece home page.jpg" alt="Beautiful Greek Islands" class="greek-islands">
+            <h3>Discover Athens</h3>
+            <p>Welcome to Greece, where ancient myths blend with modern charm. Begin your journey in Athens, exploring the Acropolis and vibrant 
+                neighborhoods like Plaka and Monastiraki. Dive into history at the National Archaeological Museum.</p>
+            <h3>Explore the islands</h3>
+            <p>Santorini's breathtaking sunsets, Mykonos' lively nightlife, and the tranquil beauty of Naxos and Paros await you. Don’t forget Crete, 
+                with its stunning beaches and rich mythology. Each island offers unique experiences and unforgettable views.</p>
+            <h3>Savor Greek Cuisine</h3>
+            <p>Indulge in Greek salads, souvlaki, moussaka, and baklava, paired with local wines like Assyrtiko and Agiorgitiko. Greek cuisine celebrates
+                 fresh, flavorful ingredients and traditional recipes. Enjoy every bite as part of your authentic Greek adventure.</p>
         </section>
 
-        <section id="about">
-            <h2>About This Blog</h2>
-            <p>This blog is dedicated to sharing the best travel tips, destinations, and experiences in the Greek Islands. Whether you're looking for adventure, relaxation, or cultural exploration, you'll find something here.</p>
-        </section>
-
-        <section id="destinations">
-            <h2>Top Destinations</h2>
-            <article class="destination">
-                <h3>Santorini</h3>
-                <img src="images/santorini.jpg" alt="Santorini">
-                <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
-            </article>
-            <article class="destination">
-                <h3>Mykonos</h3>
-                <img src="images/mykonos.jpg" alt="Mykonos">
-                <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
-            </article>
-            <article class="destination">
-                <h3>Crete</h3>
-                <img src="images/crete.jpg" alt="Crete">
-                <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
-            </article>
-        </section>
+        
     </main>
 
     <footer>
-        <p>&copy; 2024 Greek Islands Travel Blog. All rights reserved.</p>
+        <p>&copy; 2024 Greece Travel Guide.</p>
     </footer>
 </body>
 </html>
