--- a/destinations.html
+++ b/destinations.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greek Islands Travel Blog</title>
     <link rel="stylesheet" href="/main.css">
+    <link rel="icon" href="images/favicon.ico" type="image/icon">
 </head>
 <body>
     <header>
-        <h1>Greek Islands Travel Blog</h1>
+        <h1>Greece Travel Guide</h1>
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/about.html">About</a></li>
                 <li><a href="/destinations.html">Destinations</a></li>
-                <li><a href="/packing.html">Packing List</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -25,17 +26,21 @@
             <h2>Top Destinations</h2>
             <article class="destination">
                 <h3>Santorini</h3>
-                <img src="images/santorini.jpg" alt="Santorini">
+                <a href="santorini-description.html">
+                <img src="images/santorini.jpg" alt="Santorini" class="islands">
+                </a>
                 <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
             </article>
             <article class="destination">
                 <h3>Mykonos</h3>
-                <img src="images/mykonos.jpg" alt="Mykonos">
+                <a href="mykonos-description.html">
+                <img src="images/mykonos.jpg" alt="Mykonos" class="islands"></a>
                 <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
             </article>
             <article class="destination">
                 <h3>Crete</h3>
-                <img src="images/crete.jpg" alt="Crete">
+                <a href="crete-description.html">
+                <img src="images/crete.jpg" alt="Crete" class="islands"></a>
                 <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
             </article>
         </section>
