--- a/main html/about.html
+++ b/main html/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greek Islands Travel Blog</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/styles/about.css">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -12,10 +12,10 @@
         <h1>Greece Travel Guide</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/destinations.html">Destinations</a></li>
-                <li><a href="/history.html">History</a></li>
-                <li><a href="/about.html">About</a></li>
+                <li><a href="/main html/index.html">Home</a></li>
+                <li><a href="/main html/destinations.html">Destinations</a></li>
+                <li><a href="/main html/history.html">History</a></li>
+                <li><a href="/main html/about.html">About</a></li>
             </ul>
         </nav>
     </header>
