--- a/main html/destinations.html
+++ b/main html/destinations.html
@@ -26,20 +26,20 @@
             <h2>Top Destinations</h2>
             <article class="destination">
                 <h3>Santorini</h3>
-                <a href="santorini-description.html">
+                <a href="/sub html/santorini-description.html">
                 <img src="/images/santorini.jpg" alt="Santorini" class="islands">
                 </a>
                 <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
             </article>
             <article class="destination">
                 <h3>Mykonos</h3>
-                <a href="mykonos-description.html">
+                <a href="/sub html/mykonos-description.html">
                 <img src="/images/mykonos.jpg" alt="Mykonos" class="islands"></a>
                 <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
             </article>
             <article class="destination">
                 <h3>Crete</h3>
-                <a href="crete-description.html">
+                <a href="/sub html/crete-description.html">
                 <img src="/images/crete.jpg" alt="Crete" class="islands"></a>
                 <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
             </article>
