--- a/sub html/crete-description.html
+++ b/sub html/crete-description.html
@@ -26,7 +26,7 @@
             <h2>Crete</h2>
             <article class="destination">
                 <h3>Crete</h3>
-                <img src="images/crete.jpg" alt="Crete" class="islands">
+                <img src="/images/crete.jpg" alt="Crete" class="islands">
                 <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
             </article>
         </section>
