--- a/sub html/mykonos-description.html
+++ b/sub html/mykonos-description.html
@@ -26,7 +26,7 @@
             <h2>Mykonos</h2>
             <article class="destination">
                 <h3>Mykonos</h3>        
-                <img src="images/mykonos.jpg" alt="Mykonos" class="islands">
+                <img src="/images/mykonos.jpg" alt="Mykonos" class="islands">
                 <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
             </article>
             
