--- a/sub html/santorini-description.html
+++ b/sub html/santorini-description.html
@@ -26,7 +26,7 @@
             <h2>Santorini</h2>
             <article class="destination">
                 <h3>Santorini</h3>
-                <img src="images/santorini.jpg" alt="Santorini" class="islands">
+                <img src="/images/santorini.jpg" alt="Santorini" class="islands">
                 <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
             
             </article>
