--- a/main html/index.html
+++ b/main html/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>Greece Travel Guide</h1>
+        <h1 class="cursive-text">Greek Island Gal</h1>
         <nav>
             <ul>
                 <li><a href="/main html/index.html">Home</a></li>
-                <li><a href="/main html/destinations.html">Destinations</a></li>
+                <li><a href="/main html/destinations.html">Destinations</a>
+                
+                </li>
+
                 <li><a href="/main html/history.html">History</a></li>
                 <li><a href="/main html/about.html">About</a></li>
             </ul>
