--- a/sub html/mykonos-description.html
+++ b/sub html/mykonos-description.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Greece Travel Guide</h1>
+        <h1 class="cursive-text">Greek Island Gal</h1>
         <nav>
             <ul>
                 <li><a href="/main html/index.html">Home</a></li>
