--- a/main html/history.html
+++ b/main html/history.html
@@ -24,7 +24,7 @@
         <section id="history">
             <article>
             <h2>The Rich History of Greece and Its Islands</h2>
-            <img src="images/greek-islands.jpg" alt="Beautiful Greek Islands">
+            <img src="/images/statue.jpg" alt="Historical Monument">
             <p>Greece, a country steeped in history, has played a pivotal role in shaping Western civilization. From the ancient city-states of Athens 
                 and Sparta to the vast empire of Alexander the Great, Greece's historical impact is profound. The Acropolis in Athens, with its iconic 
                 Parthenon, stands as a testament to the architectural and cultural achievements of ancient Greece. <br>
