--- a/main html/destinations.html
+++ b/main html/destinations.html
@@ -24,30 +24,30 @@
 
         <section id="destinations">
             <h2>Top Destinations</h2>
-            <article class="destination">
+            <article class="destination" id="santorini">
                 <h3>Santorini</h3>
                 <a href="/sub html/santorini-description.html">
-                <img src="/images/santorini.jpg" alt="Santorini" class="islands">
+                <img src="/images/vertical - santorini.jpg" alt="Santorini" class="islands">
                 </a>
-                <p>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</p>
+                <p><i>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</i></p>
             </article>
-            <article class="destination">
+            <article class="destination" id="mykonos">
                 <h3>Mykonos</h3>
                 <a href="/sub html/mykonos-description.html">
-                <img src="/images/mykonos.jpg" alt="Mykonos" class="islands"></a>
+                <img src="/images/vert-mykonos.jpg" alt="Mykonos" class="islands"></a>
                 <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
             </article>
-            <article class="destination">
+            <article class="destination" id="crete">
                 <h3>Crete</h3>
                 <a href="/sub html/crete-description.html">
-                <img src="/images/crete.jpg" alt="Crete" class="islands"></a>
+                <img src="/images/vertical-crete.jpg" alt="Crete" class="islands"></a>
                 <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
             </article>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Greek Islands Travel Blog. All rights reserved.</p>
+        <p>&copy; 2024 Greek Islands Travel Blog. Taylor Spencer.</p>
     </footer>
 </body>
 </html>
