--- a/sub html/crete-description.html
+++ b/sub html/crete-description.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Greek Islands Travel Blog. All rights reserved.</p>
+        <p>&copy; 2024 Greek Islands Travel Blog. Taylor Spencer.</p>
     </footer>
 </body>
 </html>
