--- a/main html/index.html
+++ b/main html/index.html
@@ -43,7 +43,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Greece Travel Guide.</p>
+        <p>&copy; 2024 Greek Islands Travel Blog. Taylor Spencer.</p>
     </footer>
 </body>
 </html>
