--- a/main html/destinations.html
+++ b/main html/destinations.html
@@ -25,23 +25,23 @@
         <section id="destinations">
             <h2>Top Destinations</h2>
             <article class="destination" id="santorini">
-                <h3>Santorini</h3>
+                <h3><a href="/sub html/santorini-description.html">Santorini</a></h3>
                 <a href="/sub html/santorini-description.html">
                 <img src="/images/vertical - santorini.jpg" alt="Santorini" class="islands">
                 </a>
                 <p><i>Famous for its white-washed buildings and breathtaking sunsets, Santorini is a must-visit island in Greece.</i></p>
             </article>
             <article class="destination" id="mykonos">
-                <h3>Mykonos</h3>
+                <h3><a href="/sub html/mykonos-description.html">Mykonos</a></h3>
                 <a href="/sub html/mykonos-description.html">
                 <img src="/images/vert-mykonos.jpg" alt="Mykonos" class="islands"></a>
-                <p>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</p>
+                <p><i>Known for its vibrant nightlife and beautiful beaches, Mykonos is the perfect destination for party-goers and sun-seekers.</i></p>
             </article>
             <article class="destination" id="crete">
-                <h3>Crete</h3>
+                <h3><a href="/sub html/crete-description.html">Crete</a></h3>
                 <a href="/sub html/crete-description.html">
                 <img src="/images/vertical-crete.jpg" alt="Crete" class="islands"></a>
-                <p>Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</p>
+                <p><i> Rich in history and culture, Crete offers visitors a unique blend of ancient ruins, charming villages, and stunning landscapes.</i></p>
             </article>
         </section>
     </main>
