--- a/main html/about.html
+++ b/main html/about.html
@@ -23,6 +23,9 @@
     <main>
         <section id="about">
             <h2>About This Blog</h2>
+            <figure>
+                <img src="/images/acropolis.jpg" alt="acropolis" id="acropolis">
+            </figure>
             <p> Welcome to my Greece Travel Blog, your ultimate guide to exploring the enchanting land of Greece. 
                 Here, you'll find insider tips, detailed itineraries, and personal stories to help you navigate 
                 through Greece's historical landmarks, stunning islands, and vibrant culture. Whether you're planning 
