--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 class="cursive-text">Greek Island Gal</h1>
         <nav>
             <ul>
-                <li><a href="/main html/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/main html/destinations.html">Destinations</a>
                 
                 </li>
