--- a/main html/about.html
+++ b/main html/about.html
@@ -32,6 +32,8 @@
                 your first visit or are a seasoned traveler looking for new adventures, this blog aims to inspire and 
                 equip you with everything you need for an unforgettable Greek journey. Join me as we uncover the beauty, 
                 history, and delicious cuisine that make Greece a dream destination for travelers around the world.</p>
+                <a href="/Greece Fun Facts.pdf">Click here for fun facts about Greece!</a><br>
+              
         </section>
 
     </main>
