--- a/main html/history.html
+++ b/main html/history.html
@@ -37,6 +37,10 @@
                 monasteries, all while enjoying the breathtaking natural beauty that has enchanted travelers for millennia. The history of Greece 
                 and its islands is not just a story of the past but a living, breathing narrative that continues to influence and inspire.</p>
             </article>
+            <div>  <h4 class="audio">Click the play button to learn about Greece's History!</h4>
+                <audio controls>
+                    <source src="/A Super Quick History of Greece.mp3" type="audio/mp3">
+                </audio></div>
             </section>
     </main>
 
