--- a/sub html/crete-description.html
+++ b/sub html/crete-description.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/main html/destinations.html">Destinations</a></li>
-                <li><a href="/main html/history.html">History</a></li>
-                <li><a href="/main html/about.html">About</a></li>
+                <li><a href="/destinations.html">Destinations</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
                     like moussaka and fresh seafood are best enjoyed in charming tavernas across the island. Crete 
                     promises an unforgettable experience filled with wonder and discovery.</p>
             
-                <p><a href="/main html/destinations.html" id="back">More Destinations</a></p>
+                <p><a href="/destinations.html" id="back">More Destinations</a></p>
             </article>
 
         
