--- a/sub html/mykonos-description.html
+++ b/sub html/mykonos-description.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/main html/destinations.html">Destinations</a></li>
-                <li><a href="/main html/history.html">History</a></li>
-                <li><a href="/main html/about.html">About</a></li>
+                <li><a href="/destinations.html">Destinations</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
                     island of Delos provide fascinating insights into the island’s history. Mykonos truly captures the 
                     heart and imagination of every traveler.</p>
             
-                <p><a href="/main html/destinations.html" id="back">More Destinations</a></p>
+                <p><a href="/destinations.html" id="back">More Destinations</a></p>
             </article>
 
         
