--- a/sub html/santorini-description.html
+++ b/sub html/santorini-description.html
@@ -13,9 +13,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/main html/destinations.html">Destinations</a></li>
-                <li><a href="/main html/history.html">History</a></li>
-                <li><a href="/main html/about.html">About</a></li>
+                <li><a href="/destinations.html">Destinations</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -50,7 +50,7 @@
                      unparalleled beauty, Santorini promises an unforgettable experience. This enchanting island captivates every
                       visitor, leaving them with memories that last a lifetime.</p>
             
-                <p><a href="/main html/destinations.html" id="back">More Destinations</a></p>
+                <p><a href="/destinations.html" id="back">More Destinations</a></p>
             </article>
 
         
