--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="/main html/destinations.html">Destinations</a>
+                <li><a href="/destinations.html">Destinations</a>
                 
                 </li>
 
-                <li><a href="/main html/history.html">History</a></li>
-                <li><a href="/main html/about.html">About</a></li>
+                <li><a href="/history.html">History</a></li>
+                <li><a href="/about.html">About</a></li>
             </ul>
         </nav>
     </header>
